[package]
name = "aoc20"
version = "0.1.0"
authors = ["mike"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
reqwest = {version = "0.10.9", features = ["blocking"]}
chrono = "0.4"
dotenv = "0.15.0"
